--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "inngest": "^1.6.0",
     "ksuid": "^3.0.0",
     "pg": "^8.8.0",
     "pino": "^8.8.0",
