--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "pino-pretty": "^9.1.1",
+    "schema-dts": "^1.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
