--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "tsc",
     "dev": "nodemon -r dotenv/config --exec ts-node-esm src/index.ts",
     "start": "node -r dotenv/config build/index.js",
+    "test": "jest --setupFiles dotenv/config",
     "start:docker": "node -r dotenv/config index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.5.0",
@@ -34,6 +37,7 @@
     "express": "^4.18.2",
     "inngest": "^1.6.0",
     "ksuid": "^3.0.0",
+    "node-fetch": "^3.3.1",
     "pg": "^8.8.0",
     "pino": "^8.8.0",
     "uuid": "^9.0.0"
