--- a/package.json
+++ b/package.json
@@ -8,27 +8,24 @@
     "build": "tsc",
     "dev": "nodemon -r dotenv/config --exec ts-node-esm src/index.ts",
     "start": "node -r dotenv/config build/index.js",
-    "test": "jest --setupFiles dotenv/config",
+    "test": "vitest",
     "start:docker": "node -r dotenv/config index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-typescript": "^7.21.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
-    "@types/jest": "^29.5.0",
     "@types/node": "^18.11.18",
     "@types/pg": "^8.6.6",
     "@types/uuid": "^9.0.0",
-    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "pino-pretty": "^9.1.1",
     "schema-dts": "^1.1.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^0.29.8"
   },
   "dependencies": {
     "cors": "^2.8.5",
