update schema to include selector
html handling functions

fetch page content workflow

remove namespace from events

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vitest": "^0.29.8"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
